# csm-mlx

./: .gitignore  FINETUNING.md  FINETUNING_CLI.md  README.md  pyproject.toml  requirements.txt  run-streaming-csm.sh  run_streaming_csm_mlx.py  stt_processor.py
csm_mlx/: __init__.py  __main__.py  attention.py  config.py  generation.py  models.py  segment.py  tokenizers.py  utils.py
csm_mlx/cli/: application.py  config.py  generate.py
csm_mlx/cli/finetune/: __init__.py  dataset.py  full_finetune.py  lora_finetune.py  utils.py
csm_mlx/finetune/: README.md  __init__.py  create_dataset.py  dataset.py  finetune.py  finetune_lora.py  lora.py  trainer.py  utils.py
datasets/: README.md  audio  run_example.sh  sample_dataset.json
examples/: example.py  example_finetuned_full.py  example_finetuned_lora.py  finetune_example.py  finetune_lora_example.py
