[project]
name = "csm-mlx"
version = "0.1.0"
description = "Implementation of the CSM(Conversation Speech Model) for Apple Silicon using MLX."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.22.0",
    "mlx>=0.22.1",
    "moshi-mlx @ git+https://github.com/kyutai-labs/moshi.git#subdirectory=moshi_mlx",
    "transformers>=4.48.3",
]
