[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csm-mlx"
version = "0.1.0"
description = "Implementation of the CSM(Conversation Speech Model) for Apple Silicon using MLX."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "mlx-lm>=0.22.0",
    "mlx>=0.22.1",
    "moshi-mlx>=0.2.2",
    "transformers>=4.48.3",
]

[project.optional-dependencies]
cli = ["audiofile>=1.5.1", "audresample>=1.3.3", "typer>=0.15.2"]

[project.scripts]
csm-mlx = "csm_mlx.cli.application:app"
